<resources>
    <string name="app_name">VirtualRobinhood</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="watchlist">Watchlist</string>
    <string name="portfolio">Portfolio</string>
    <string name="sign_out">Sign out</string>
    <string name="deposit_funds">Purchase Currency</string>
    <string name="history">History</string>
    <string name="available_credit_title">Available Credit</string>
    <string name="portfolio_value">Portfolio Value</string>

    <string name="new_watchlist">New watchlist</string>
    <string name="watchlist_name">Watchlist name</string>
    <string name="create_watchlist">Create watchlist</string>
    <string name="remove_symbol_msg">Remove this symbol?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="profile_image_description">Profile image</string>
    <string name="buy_stock">Buy</string>
    <string name="sell_stock">Sell</string>
    <string name="key_statistics">Key Statistics</string>
    <string name="stock_open">Open</string>
    <string name="stock_low">Low</string>
    <string name="stock_high">High</string>
    <string name="stock_close">Close</string>
    <string name="credit_available_to_trade">Credit available to Trade</string>
    <string name="stock_quantity">Quantity</string>
    <string name="mkt_price">MKT price</string>
    <string name="estimated_cost">Estimated cost</string>
    <string name="buy_button">Buy</string>
    <string name="available_quantity">Available quantity</string>
    <string name="number_of_stocks_to_sell">Number of stocks to sell</string>
    <string name="estimated_gain">Estimated gain</string>
    <string name="sell_button">Sell</string>
    <string name="cost_per_share">Cost per share</string>
    <string name="position_to_sell">Position to sell</string>
    <string name="price">Price</string>
    <string name="filled_date">Filled date</string>
    <string name="transactions">Transactions</string>
    <string name="add_stock_to_watchlist">Symbol was added to your watchlist!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_text">You are not connected to Internet.\n Check your internet connection</string>
    <string name="snackbar_internet_action_text">Turn on Internet</string>
    <string name="request_failed_text">"Failed to get articles. Please try again!"</string>
    <string name="request_failed_too_many_requests_text">"Too many requests. Please try again later!"</string>
    <string name="related_articles">Related Articles</string>
</resources>
