<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/portfolio_value_title"
        android:title="@string/portfolio_value_title" />

    <item
        android:id="@+id/portfolio_value"
        android:title="@string/portfolio_value" />

    <item
        android:id="@+id/nav_watchlist"
        android:title="@string/watchlist" />
    <item
        android:id="@+id/nav_portfolio"
        android:title="@string/portfolio" />

    <item android:id="@+id/action_search"
        android:orderInCategory="5"
        android:title="Search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_progress"
        android:title="Loading..."
        android:visible="false"
        android:orderInCategory="100"
        app:showAsAction="always"
        app:actionLayout="@layout/action_view_progress" />

    <item
        android:id="@+id/nav_add_money"
        android:title="@string/deposit_funds" />

    <item
        android:id="@+id/nav_transactions"
        android:title="@string/transactions" />

    <item
        android:id="@+id/nav_sign_out"
        android:title="@string/sign_out" />
</menu>